# UniSim

./: .gitignore  Cargo.toml  build.rs  compile.sh  dead_code.rs  performance_results.csv  template.json
examples/: 100.rs  costum.rs  cuda.rs  gravity.rs  mutation.rs  performance.rs  toxic.rs
experiments/: mutation.json
experiments/mutation/: extract.py  fast_genome.py  mutation.json
experiments/toxic/: extract.py  fast_genome.py  toxic.json
lib/: grid.lib  memory.lib  test.lib
native/windows/: grid.lib
scripts/: extract.py  fast_allel_check.py  fast_genome.py  genome.py  graph.py  view.py
src/: lib.rs  prelude.rs  settings_.rs  test.rs
src/cuda/: cuda_bindings.rs  cudaworld.rs  grid.cu  memory.cu  mod.rs  test.cu
src/cuda/cu_src/: grid.cu  helper.hpp  memory.cu  test.cu
src/objects/: entity.rs  genome.rs  ligand.rs  mod.rs  receptor.rs
src/world/: global.rs  info.rs  mod.rs  save.rs  serialize.rs  settings.rs  settings_impl.rs  space.rs  space_impl.rs
