[package]
name = "UniSim"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug", "rayon", "cuda"]
debug = []
save_ligands = ["debug"]

cuda = ["dep:libc", "rayon"]

[dev-dependencies]
csv = "1.3.1"

[dependencies]
paste = "1.0.15"
rand = "0.9.2"
rand_distr = "0.5.1"
ndarray = "0.17.1"
serde_json = "1.0.147"
serde = {version = "1.0.228", features = ["derive"]}

rayon = {version = "1.11.0", optional = true}
libc = {version = "0.2.177", optional = true }

